--- a/XboxBuddy/Main.storyboard
+++ b/XboxBuddy/Main.storyboard
@@ -56,15 +56,8 @@
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="User Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q7e-vK-kFC">
-                                                    <rect key="frame" x="3" y="9" width="89" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Screenname" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pwk-gR-omQ">
-                                                    <rect key="frame" x="89" y="9" width="102" height="21"/>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Gamer Tag" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pwk-gR-omQ">
+                                                    <rect key="frame" x="3" y="12" width="102" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                                     <nil key="highlightedColor"/>
@@ -82,11 +75,10 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="gameAchievement" destination="jjh-u3-h1G" id="R0s-Xk-H4K"/>
-                                    <outlet property="timestamp" destination="wwJ-yB-E4M" id="fGu-fx-DmO"/>
-                                    <outlet property="userImage" destination="lk8-VT-UEN" id="zcP-8D-ngw"/>
-                                    <outlet property="userName" destination="Q7e-vK-kFC" id="Jjv-rS-u5L"/>
-                                    <outlet property="userScreenName" destination="pwk-gR-omQ" id="m62-uR-Cql"/>
+                                    <outlet property="achievementEarnedOn" destination="wwJ-yB-E4M" id="sdk-XI-e32"/>
+                                    <outlet property="achievementName" destination="jjh-u3-h1G" id="CxQ-LZ-ttE"/>
+                                    <outlet property="gamerImage" destination="lk8-VT-UEN" id="naE-R9-Eri"/>
+                                    <outlet property="gamerTag" destination="pwk-gR-omQ" id="5vj-HG-msp"/>
                                     <segue destination="EsV-EW-HG1" kind="push" identifier="showAchievementDetail" id="DYk-JR-jkb"/>
                                 </connections>
                             </tableViewCell>
