--- a/XboxBuddy/Main.storyboard
+++ b/XboxBuddy/Main.storyboard
@@ -350,7 +350,7 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
+        <segue reference="DYk-JR-jkb"/>
         <segue reference="gsa-K0-7IE"/>
-        <segue reference="gN1-At-mix"/>
     </inferredMetricsTieBreakers>
 </document>
