--- a/XboxBuddy/Main.storyboard
+++ b/XboxBuddy/Main.storyboard
@@ -256,6 +256,9 @@
                     <navigationItem key="navigationItem" title="User Timeline" id="58t-kU-QtM">
                         <barButtonItem key="rightBarButtonItem" image="settings-24-transparent-bg" id="y9g-JF-VP8">
                             <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <segue destination="9w1-Qc-jaR" kind="modal" id="Xyl-lW-LOJ"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
